# RandCSPBench

./: .gitignore  LICENSE  README.md  pyproject.toml
algorithms/BeliefPropagation_COL/: DECIM_run_Q3.sh  DECIM_run_Q5.sh  README.md  REIN_run_g99_dt10_Q3.sh  REIN_run_g99_dt10_Q5.sh  colBP_decim_quadratic.c  colBP_reinforcement.c
algorithms/BeliefPropagation_SAT/: BP_SAT.jl
algorithms/CaDiCal_SAT/: CaDiCal.jl  makefile
algorithms/FMS_COL/: FMS_from_file.c  README_FMScol.md
algorithms/FMS_SAT/: README.md  wfacwsat.c
algorithms/NeuroSAT/: README.md  test.py  train.py
algorithms/QuerySAT/: README.md  config.py  main.py  requirements.txt
algorithms/QuerySAT-PyG/: README.md  ind_result_analysis.ipynb  test.py  test_col.py  train.py
algorithms/SimulatedAnnealing_COL/: RSA.c  SA_run_T1000N_Q3.sh  SA_run_T1000N_Q5.sh
algorithms/SimulatedAnnealing_SAT/: SAforKSAT.c  readme.txt
algorithms/SurveyPropagation_SAT/: Graph.cpp  Graph.hpp  Header.h  README.md  main.cpp  walksat.cpp
datasets/: Project.toml  gen_graphs_coloring.py  gen_graphs_sat.jl
datasets/src-julia/: SAT.jl  cnf.jl  generators.jl
results_evaluation/: analysis.ipynb  get_scores_david.ipynb  sat2col_random.py
results_evaluation/3COL/: 3COL_BeliefPropagation_frac-decimated=1overN.csv  3COL_BeliefPropagation_reinforcement_gamma=0.99_dt=10.csv  3COL_FMScol_eta=0.37_nsteps=625N^2.csv  3COL_SimulatedAnnealing_nsteps=1000N^2.csv  3COL_rPI-GNN_ntrials=5.csv
results_evaluation/3SAT/: 3SAT_FMS_nsteps=1000N^2.csv  3SAT_FMS_nsteps=100N^2.csv  3SAT_NeuroSAT_supervised_niters=2N_Ntrain=256.csv  (+8 more)
(+66 files in other folders)
