[project]
name = "benchmarks-sat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4,<2.0",
    "cnfgen>=0.9,<0.10",
    "ipykernel>=6.30,<7.0",
    "jupyter>=1.0,<2.0",
    "matplotlib>=3.10,<4.0",
    "networkx>=3.0,<4.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.3,<3.0",
    "scipy>=1.15,<2.0",
]
